--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
     height: 100vh;
     width: 100%;
-    background-image: url(media/image.jpg);
+    background-image: url(image.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
